Spacing bug fixed.

--- a/src/styles/pe-inline.css
+++ b/src/styles/pe-inline.css
@@ -2,12 +2,9 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	row-gap: .5rem;
-}
-/* children spacing */
 
-.pe-inline > *:not(:last-child) {
-	margin-right: 0.75rem;
+	gap: .75rem;
+	row-gap: .5rem;
 }
 
 /* Children width */
